<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henry.henry.Foods2">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textColor="#000000"
        android:textSize="20dp"
        android:padding="5dp"
        />





    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Macrons"
        android:textColor="#ef1455"
        android:textSize="25dp"
        android:textStyle="bold"
        android:padding="10dp"
        />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/macrons"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="120dp"
        android:text="@string/descriptionmacrons2"
        android:textSize="18dp"
        android:textColor="#970e36"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Spiced Food"
        android:layout_marginTop="250dp"
        android:textColor="#ef1455"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="10dp"/>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="300dp"
        android:padding="8sp"
        android:src="@drawable/spice"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="120dp"
        android:text="/@ 11,500ugx"
        android:textColor="#15ff00"
        android:textSize="15dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="90dp"
        android:text="/@ 3,500ugx"
        android:textColor="#15ff00"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="320dp"
        android:text="@string/descriptionspice2"
        android:textColor="#970e36"
        android:textSize="18dp" />
</RelativeLayout>
    </ScrollView>

</FrameLayout>
